tests/restrict-tenant-secret-stores/resources.yaml
---
apiVersion: external-secrets.io/v1
kind: SecretStore
metadata:
  name: shared-controller-role
  namespace: tenant-ns
spec:
  provider:
    vault:
      server: http://openbao.openbao.svc.cluster.local:8200
      path: secret
      version: v2
      auth:
        kubernetes:
          mountPath: kubernetes
          role: external-secrets
          serviceAccountRef:
            name: tenant
---
apiVersion: external-secrets.io/v1
kind: SecretStore
metadata:
  name: implicit-controller-service-account
  namespace: tenant-ns
spec:
  provider:
    vault:
      server: http://openbao.openbao.svc.cluster.local:8200
      path: secret
      version: v2
      auth:
        kubernetes:
          mountPath: kubernetes
          role: tenant
---
apiVersion: external-secrets.io/v1
kind: SecretStore
metadata:
  name: cross-namespace-service-account
  namespace: tenant-ns
spec:
  provider:
    vault:
      server: http://openbao.openbao.svc.cluster.local:8200
      path: secret
      version: v2
      auth:
        kubernetes:
          mountPath: kubernetes
          role: tenant
          serviceAccountRef:
            name: tenant
            namespace: another-tenant
---
apiVersion: external-secrets.io/v1
kind: SecretStore
metadata:
  name: tenant-role-implicit-namespace
  namespace: tenant-ns
spec:
  provider:
    vault:
      server: http://openbao.openbao.svc.cluster.local:8200
      path: secret
      version: v2
      auth:
        kubernetes:
          mountPath: kubernetes
          role: tenant
          serviceAccountRef:
            name: tenant
---
apiVersion: external-secrets.io/v1
kind: SecretStore
metadata:
  name: tenant-role-explicit-namespace
  namespace: tenant-ns
spec:
  provider:
    vault:
      server: http://openbao.openbao.svc.cluster.local:8200
      path: secret
      version: v2
      auth:
        kubernetes:
          mountPath: kubernetes
          role: tenant
          serviceAccountRef:
            name: tenant
            namespace: tenant-ns
---
apiVersion: external-secrets.io/v1
kind: SecretStore
metadata:
  name: platform-secret-store
  namespace: platform-ns
spec:
  provider:
    vault:
      server: http://openbao.openbao.svc.cluster.local:8200
      path: secret
      version: v2
      auth:
        kubernetes:
          mountPath: kubernetes
          role: external-secrets
